# Joey-Projects

./: .gitignore  CLAUDE.md  README.md  config.toml.example  pyproject.toml
docs/: 00-project-outline.md  01-decisions-log.md  02-open-questions.md  compliance.md  data-sources.md  tech-stack.md
docs/deployment/: README.md  claude-laptop-setup-prompt.md  maintenance.md  runbook.md  troubleshooting.md  working-with-claude.md
docs/methodology/: bullish-percent-index.md  fundamental-screen.md  in-momentum-detection.md  point-and-figure.md  pre-momentum-detection.md  relative-strength.md
docs/research/: dwa-access.md  dwa-sales-call-checklist.md  ndw-data-link-alternatives.md  ndw-data-link-pricing.md  norgate-data.md
scripts/: end_to_end_smoke.py  pnf_bot_daily_run.xml  run_daily_keep_awake.ps1  send_test_email.py
src/pnf_bot/: __init__.py  cli.py  config.py
src/pnf_bot/backtest/: __init__.py  harness.py  metrics.py  tuning.py
src/pnf_bot/data/: __init__.py  norgate.py  prices.py  (+2 more)
tests/: test_anti_patterns.py  test_backtest.py  test_box_scaling.py  test_bpi.py  test_chart_construction.py  test_chart_rendering.py  test_checklist.py  test_composite.py  test_compound_signals.py  test_delivery_audit.py  test_feedback.py  test_in_momentum_patterns.py  test_intra_sector_rank.py  test_norgate_adapter.py  test_obos.py  test_one_box_away.py  test_pre_momentum_patterns.py  test_report_rendering.py  test_rew_risk.py  test_rrisk.py  test_rs.py  test_sector_indicators.py  test_signals.py  test_storage.py  test_ta_composite.py  test_trendlines.py  test_weight_tuning.py
(+35 files in other folders)
