[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pnf-bot"
version = "0.0.1"
description = "Point & Figure stock screener bot for daily pre-momentum / in-momentum candidate identification"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Abe Gerstein"},
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "sqlalchemy>=2.0",
    "pydantic>=2.5",
    "jinja2>=3.1",
    "matplotlib>=3.8",
    "weasyprint>=60",
    "httpx>=0.27",
    "click>=8.1",
    "python-dateutil>=2.8",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.8",
]
norgate = [
    "norgatedata>=1.0",
]

[project.scripts]
pnf-bot = "pnf_bot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "E741"]  # E501 line-too-long; E741 ambiguous var name (we use `l` for low)

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-ra", "--strict-markers"]
